Move exclusive loopunroll variables inside ifdef sections.

--- a/test/mrWolf/dot_prod/test_lib/testset.cfg
+++ b/test/mrWolf/dot_prod/test_lib/testset.cfg
@@ -90,7 +90,8 @@ implemented = {
 		'q32_parallel': True,
 		'q16_parallel': True,
 		'q8_parallel':  True,
-		'f32_parallel': True
+		'f32_parallel': True,
+		'f16_parallel': True
 	},
 	'ibex': {
 		'i32': True,
