Add further optimization to 16-bit xpulpv2 dotprod kernels.

--- a/test/mrWolf/dot_prod/test_lib/testset.cfg
+++ b/test/mrWolf/dot_prod/test_lib/testset.cfg
@@ -77,29 +77,29 @@ arguments = [
 
 implemented = {
 	'riscy': {
-		'i32': True,
-		'i16': True,
-		'i8':  True,
-		'q32': True,
-		'q16': True,
-		'q8':  True,
-		'f32': True,
-		'i32_parallel': True,
+		#'i32': True,
+		#'i16': True,
+		#'i8':  True,
+		#'q32': True,
+		#'q16': True,
+		#'q8':  True,
+		#'f32': True,
+		#'i32_parallel': True,
 		'i16_parallel': True,
-		'i8_parallel':  True,
-		'q32_parallel': True,
+		#'i8_parallel':  True,
+		#'q32_parallel': True,
 		'q16_parallel': True,
-		'q8_parallel':  True,
-		'f32_parallel': True,
+		#'q8_parallel':  True,
+		#'f32_parallel': True,
 		'f16_parallel': True
 	},
 	'ibex': {
-		'i32': True,
-		'i16': True,
-		'i8':  True,
-		'q32': True,
-		'q16': True,
-		'q8':  True,
+		#'i32': True,
+		#'i16': True,
+		#'i8':  True,
+		#'q32': True,
+		#'q16': True,
+		#'q8':  True,
 	}
 }
 
