--- a/test/mrWolf/testset.cfg
+++ b/test/mrWolf/testset.cfg
@@ -13,11 +13,11 @@ c['testsets'] = []
 
 # add new test folders here:
 # add_test_folder(c, 'test_template') #example on how to do it
-add_test_folder(c, 'conv')
+# add_test_folder(c, 'conv')
 # add_test_folder(c, 'correlate')
 # add_test_folder(c, 'conv_valid')
 # add_test_folder(c, 'conv_valid_rep')
-# add_test_folder(c, 'dot_prod')
+add_test_folder(c, 'dot_prod')
 # add_test_folder(c, 'mat_mul')
 # add_test_folder(c, 'mat_mul_cmplx')
 # add_test_folder(c, 'mat_mul_trans')
