Apply same parallel dot product optimization to i32.

--- a/test/mrWolf/dot_prod/test_lib/testset.cfg
+++ b/test/mrWolf/dot_prod/test_lib/testset.cfg
@@ -62,7 +62,7 @@ from pulp_dsp_test import generate_test
 function_name = 'plp_dot_prod'
 
 variables = [
-	SweepVariable('len', [128, 512, 768, 1024]),
+	SweepVariable('len', [128, 420, 512, 768, 820, 1024, 5000, 6960]),
 	SweepVariable('deciPoint', [4], active=lambda v: 'q' in v)
 ]
 
@@ -84,13 +84,13 @@ implemented = {
 		#'q16': True,
 		#'q8':  True,
 		#'f32': True,
-		#'i32_parallel': True,
+		'i32_parallel': True,
 		'i16_parallel': True,
-		#'i8_parallel':  True,
-		#'q32_parallel': True,
+		'i8_parallel':  True,
+		'q32_parallel': True,
 		'q16_parallel': True,
-		#'q8_parallel':  True,
-		#'f32_parallel': True,
+		'q8_parallel':  True,
+		'f32_parallel': True,
 		'f16_parallel': True
 	},
 	'ibex': {
